--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,4 +25,9 @@
     .btn-standard-interior {
         @apply h-6 w-6 transition fill-zinc-100 hover:fill-zinc-200 dark:fill-zinc-700 dark:stroke-zinc-500
     }
+    
+    .logo-dark {
+        filter: brightness(0) invert(0.9);
+    }
 }
+
